checkbox alignment fix

--- a/assets/sass/flexi_style.scss
+++ b/assets/sass/flexi_style.scss
@@ -529,7 +529,8 @@ body{
 			outline: none;
 			position: absolute;
 			left: -2px;
-			top: -5px;			 
+			top: -3px;
+			z-index: 9;			 
 		}
 		&:checked:before{
 			content: "\f00c";
